Adjusted team page

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 19 2021 03:37:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -50,7 +50,7 @@ drift.load('r73nxaxiv89c');
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container">
+    <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" class="link-block w-inline-block">
           <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
@@ -70,7 +70,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="conditions_treated_page">
+  <div class="conditions_treated_page wf-section">
     <div class="main_container">
       <h1 class="section_h1">Conditions Treated</h1>
       <p class="solo_para">Modern medicine has many pitfalls such as overprescribed medications, unnecessary surgeries and symptomatic treatments that don&#x27;t achieve long-term results. Traditional Chinese Medicine is often times a better solution for treatment of chronic conditions and has many positive side effects such as improving the quality of life. According to the National Institutes of Health, <a href="https://www.nccih.nih.gov/health/traditional-chinese-medicine-what-you-need-to-know" class="blue_link">Traditional Chinese Medicine (TCM)</a> is a complete medical system that treats a wide range of conditions including, but not limited to:</p>
@@ -520,7 +520,7 @@ drift.load('r73nxaxiv89c');
       <a href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
     </div>
   </div>
-  <div class="footer_section">
+  <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
