--- a/detail_blog.html
+++ b/detail_blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 19 2021 03:37:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60978474138d1bb14dcd9917" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -42,7 +42,7 @@ drift.load('r73nxaxiv89c');
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container">
+    <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" class="link-block w-inline-block">
           <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
@@ -62,14 +62,14 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="blog_page">
+  <div class="blog_page wf-section">
     <div class="blog_container">
       <h1 class="section_h1"></h1>
       <div class="blog_page_post_date"></div><img src="" loading="lazy" alt="" class="blog_page_main_image">
       <div class="w-richtext"></div>
     </div>
   </div>
-  <div class="footer_section">
+  <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
