--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 19 2021 03:37:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -48,7 +48,7 @@ drift.load('r73nxaxiv89c');
   <!--  End of Async Drift Code  -->
 </head>
 <body class="ryu_body">
-  <div id="Hero" class="hero_section">
+  <div id="Hero" class="hero_section wf-section">
     <div data-poster-url="videos/ryu_acupuncture_hero-poster-00001.jpg" data-video-urls="videos/ryu_acupuncture_hero-transcode.mp4,videos/ryu_acupuncture_hero-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/ryu_acupuncture_hero-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
         <source src="videos/ryu_acupuncture_hero-transcode.mp4" data-wf-ignore="true">
         <source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true">
@@ -59,7 +59,7 @@ drift.load('r73nxaxiv89c');
     </div>
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container">
+    <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" aria-current="page" class="link-block w-inline-block w--current">
           <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
@@ -79,7 +79,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div id="About" class="about_section">
+  <div id="About" class="about_section wf-section">
     <div class="main_container">
       <div class="block_text_pre_h2">ABOUT US</div>
       <h2 class="section_h2">What sets us apart</h2>
@@ -113,7 +113,7 @@ drift.load('r73nxaxiv89c');
       </div>
       <div class="_2_block_row_reverse">
         <div data-w-id="058240cb-5cb0-a0b3-8ec6-6bc7cefed0ad" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_360_frame_block">
-          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/woman_happy_with_results.jpg" loading="lazy" sizes="100vw" srcset="images/woman_happy_with_results-p-1080.jpeg 1080w, images/woman_happy_with_results-p-1600.jpeg 1600w, images/woman_happy_with_results.jpg 1920w" alt="A woman rejoicing after feeling better from treatment." class="image-2"></a>
+          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/woman_happy_with_results.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 767px) 87vw, (max-width: 1439px) 43vw, 580px" srcset="images/woman_happy_with_results-p-1080.jpeg 1080w, images/woman_happy_with_results-p-1600.jpeg 1600w, images/woman_happy_with_results.jpg 1920w" alt="A woman rejoicing after feeling better from treatment." class="image-2"></a>
         </div>
         <div class="_2_block">
           <div class="block_text_pre_h2_left">RESULTS MATTER</div>
@@ -248,7 +248,7 @@ drift.load('r73nxaxiv89c');
           </a>
         </div>
         <div data-w-id="df406cd4-04cc-1944-6f8d-e388251aeeb1" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="100vw" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="Dr. Jay Ryu with a joyful mother and daughter" class="gallery_image_3">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 991px) 18vw, (max-width: 1439px) 16vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="Dr. Jay Ryu with a joyful mother and daughter" class="gallery_image_3">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -266,7 +266,7 @@ drift.load('r73nxaxiv89c');
           </a>
         </div>
         <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="100vw" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="Dr. Jay Ryu with a delighted couple." class="gallery_image_4">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 18vw, 112.5px" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="Dr. Jay Ryu with a delighted couple." class="gallery_image_4">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -284,7 +284,7 @@ drift.load('r73nxaxiv89c');
           </a>
         </div>
         <div data-w-id="fe148618-67c7-622d-53e9-ec75c71c7c62" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_right">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="100vw" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="Dr. Jay Ryu with a satisfied patient after treatment." class="gallery_image_5">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 18vw, 112.5px" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="Dr. Jay Ryu with a satisfied patient after treatment." class="gallery_image_5">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -305,10 +305,10 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="parallax_section">
+  <div class="parallax_section wf-section">
     <div class="parallax_block_herbs"></div>
   </div>
-  <div id="Services" class="services_section">
+  <div id="Services" class="services_section wf-section">
     <div class="main_container">
       <div class="block_text_pre_h2">OUR SERVICES</div>
       <h2 class="section_h2">Services to balance your life</h2>
@@ -353,10 +353,10 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="parallax_section">
+  <div class="parallax_section wf-section">
     <div class="parallax_block_cupping"></div>
   </div>
-  <div data-w-id="2100a1f4-dc7b-4b45-6d52-944c265363bb" class="testimonials_section">
+  <div data-w-id="2100a1f4-dc7b-4b45-6d52-944c265363bb" class="testimonials_section wf-section">
     <div class="horizontal_wrapper">
       <div class="block_text_pre_h2">OUR TESTIMONIALS</div>
       <h2 class="section_h2">What our patients are saying</h2>
@@ -421,7 +421,7 @@ drift.load('r73nxaxiv89c');
     <div class="horizontal_progress"></div>
     <a href="testimonials.html" class="ryu_button_testimonial w-button"><strong>SEE ALL</strong></a>
   </div>
-  <div class="testimonials_section_mobile">
+  <div class="testimonials_section_mobile wf-section">
     <div class="main_container">
       <h2 class="section_h2">Testimonials</h2>
       <div class="w-embed">
@@ -498,10 +498,10 @@ drift.load('r73nxaxiv89c');
       <a href="testimonials.html" class="ryu_button w-button"><strong>SEE ALL</strong></a>
     </div>
   </div>
-  <div class="parallax_section">
+  <div class="parallax_section wf-section">
     <div class="parallax_block_needles"></div>
   </div>
-  <div id="Services" class="blog_section">
+  <div id="Services" class="blog_section wf-section">
     <div class="main_container">
       <div class="block_text_pre_h2">OUR BLOG</div>
       <h2 class="section_h2">Sharing years of wisdom</h2>
@@ -526,17 +526,17 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="parallax_section">
+  <div class="parallax_section wf-section">
     <div class="parallax_block_tcm"></div>
   </div>
-  <div id="Contact" class="contact_section">
+  <div id="Contact" class="contact_section wf-section">
     <div class="main_container">
       <div class="block_text_pre_h2">CONTACT US</div>
       <h2 class="section_h2">Let&#x27;s connect</h2>
       <p class="solo_para">You can connect with us in a variety of ways that include email, phone, text or web form below. While we&#x27;re not magicians, we can guarantee our kind approach coupled with our years of expertise and knowledge will help you achieve balance in your journey to wellness. Feel free to reach out with questions or if you would like additional information about a particular treatment offered. We enjoy nothing more than to see our patients feeling better and returning to their normal lives and activities. </p>
       <div class="_2_block_row">
         <div class="_2_block margin_right">
-          <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" data-w-id="080dd785-70e0-d772-cecb-2c7f581d3070" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-widget w-widget-map"></div>
+          <div class="w-widget w-widget-map" data-widget-style="roadmap" data-widget-latlng="34.1523293,-118.3410588" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-enable-scroll="true" data-w-id="080dd785-70e0-d772-cecb-2c7f581d3070" data-enable-touch="true" data-widget-zoom="12" data-widget-tooltip="Ryu Acupuncture Clinic, Inc"></div>
         </div>
         <div class="_2_block margin_left">
           <div class="w-form">
@@ -554,7 +554,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="footer_section">
+  <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
