--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 19 2021 03:37:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -49,7 +49,7 @@ drift.load('r73nxaxiv89c');
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container">
+    <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" class="link-block w-inline-block">
           <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
@@ -69,13 +69,13 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="services_intro_section">
+  <div class="services_intro_section wf-section">
     <div class="main_container">
       <h1 class="section_h1">Our Services</h1>
       <p class="solo_para">We offer a wide range of holistic preventative and rehabilitative services. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proven effective for a wide array of chronic conditions. Fortunately, it is becoming more mainstream in the West. During your initial visit, we will work together to determine the cause of your condition through an evaluation of symptoms, behaviors and lifestyle. Additional examination such as history, look, feel, taste, smell and your ultimately your pulse will help guide the course of your treatment.</p>
     </div>
   </div>
-  <div class="services_picture_section">
+  <div class="services_picture_section wf-section">
     <div class="column-1">
       <div data-w-id="94ff37a6-3108-ceed-28b6-021db74dd2a4" class="photo _1"></div>
       <div data-w-id="94ff37a6-3108-ceed-28b6-021db74dd2a5" class="photo _2"></div>
@@ -125,7 +125,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="services_picture_section_mobile">
+  <div class="services_picture_section_mobile wf-section">
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_acupuncture"></div>
       <div class="services_mobile_header_block">
@@ -193,11 +193,11 @@ drift.load('r73nxaxiv89c');
       <p class="services_para_mobile">Use of the TDP lamp loosen tendons, muscles and fascia to allow an increase in blood flow. Within the blood are immune chemicals which decrease inflammation and ultimately decrease a recurrence of tightness while healing the condition. The lamp also contains a mineral plate which helps arthritic conditions.</p>
     </div>
   </div>
-  <div class="services_outro_section">
+  <div class="services_outro_section wf-section">
     <div class="main_container"></div>
     <a href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
   </div>
-  <div class="footer_section">
+  <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
