--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 19 2021 03:37:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -49,7 +49,7 @@ drift.load('r73nxaxiv89c');
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container">
+    <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" class="link-block w-inline-block">
           <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
@@ -69,7 +69,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="testimonial_page_section">
+  <div class="testimonial_page_section wf-section">
     <div class="main_container mix-container">
       <h1 class="section_h1">Testimonials</h1>
       <p class="solo_para">We pride ourselves in the great feedback received by our patients and strive to make every visit and experience exceptional. Our patients put their trust in our work and we want to continue to live up to the high expectations set for us. With over 110 five star reviews through Yelp and Google, we have often been referred to as the #1 rated acupuncturists in Los Angeles. Check out some of the wonderful testimonials we have received over the years down below.</p>
@@ -809,7 +809,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="footer_section">
+  <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
