--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 19 2021 03:37:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f759b55b643fb59da8baab6" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -44,7 +44,7 @@ drift.load('r73nxaxiv89c');
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container">
+    <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" class="link-block w-inline-block">
           <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
@@ -64,12 +64,12 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="_404_section">
+  <div class="_404_section wf-section">
     <a href="index.html" class="w-inline-block">
       <div data-w-id="77a070f7-a864-6353-bab7-14d30dcac81c" data-animation-type="lottie" data-src="documents/ryu_404.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="lottie-animation-3"></div>
     </a>
   </div>
-  <div class="footer_section">
+  <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
