--- a/accessibility.html
+++ b/accessibility.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 19 2021 03:37:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60a0bde88ffd49dc6e753672" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -44,7 +44,7 @@ drift.load('r73nxaxiv89c');
 </head>
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container">
+    <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" class="link-block w-inline-block">
           <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
@@ -64,7 +64,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="accessibility_section_main">
+  <div class="accessibility_section_main wf-section">
     <div class="main_container">
       <h1 class="section_h1">Accessibility</h1>
       <p class="legal_timestamp"><strong>Last updated May 17, 2021</strong></p>
@@ -91,13 +91,13 @@ drift.load('r73nxaxiv89c');
       </ol>
     </div>
   </div>
-  <div id="accessibility_section_1" class="accessibility_section_1">
+  <div id="accessibility_section_1" class="accessibility_section_1 wf-section">
     <div class="main_container">
       <h2 class="legal_h2">1. GENERAL</h2>
       <p class="legal_para">Ryu Acupuncture Clinic strives to ensure that its services are accessible to people with disabilities. Ryu Acupuncture Clinic has invested a significant amount of resources to help ensure that its website is made easier to use and more accessible for people with disabilities, with the strong belief that website accessibility efforts assist all users and that every person has the right to live with dignity, equality, comfort and independence.</p>
     </div>
   </div>
-  <div id="accessibility_section_2" class="accessibility_section_2">
+  <div id="accessibility_section_2" class="accessibility_section_2 wf-section">
     <div class="main_container">
       <h2 class="legal_h2">2. ACCESSIBILITY ON WWW.RYUACUPUNCTURE.COM</h2>
       <p class="legal_para">
@@ -105,31 +105,31 @@ drift.load('r73nxaxiv89c');
       </p>
     </div>
   </div>
-  <div id="accessibility_section_3" class="accessibility_section_3">
+  <div id="accessibility_section_3" class="accessibility_section_3 wf-section">
     <div class="main_container">
       <h2 class="legal_h2">3. ENABLING THE ACCESSIBILITY MENU</h2>
       <p class="legal_para">The <a href="index.html" class="blue_link">www.ryuacupuncture.com</a> accessibility menu can be enabled by clicking the accessibility menu icon that appears on the corner of the page. After triggering the accessibility menu, please wait a moment for the accessibility menu to load in its entirety.</p>
     </div>
   </div>
-  <div id="accessibility_section_4" class="accessibility_section_4">
+  <div id="accessibility_section_4" class="accessibility_section_4 wf-section">
     <div class="main_container">
       <h2 class="legal_h2">4. DISCLAIMER</h2>
       <p class="legal_para">Ryu Acupuncture Clinic continues its efforts to constantly improve the the accessibility of its site and services in the belief that it is our collective moral obligation to allow seamless, accessible and unhindered use also for those of us with disabilities.<br><br>In an ongoing effort to continually improve and remediate any accessibility issues, we also regularly scan <a href="index.html" class="blue_link">www.ryuacupuncture.com</a> with UserWay&#x27;s Accessibility Scanner to identify and fix every possible accessibility barrier on our site. Despire our efforts to make all pages and content on <a href="#" class="blue_link">www.ryuacupuncture.com</a> fully accessible, some content may not have yet been fully adapted to the strictest accessibility standards. This may be a result of not having found or identified the most appropriate technological solution.</p>
     </div>
   </div>
-  <div id="accessibility_section_5" class="accessibility_section_5">
+  <div id="accessibility_section_5" class="accessibility_section_5 wf-section">
     <div class="main_container">
       <h2 class="legal_h2">5. HERE FOR YOU</h2>
       <p class="legal_para">If you are experiencing difficulty with any content on <a href="index.html" class="blue_link">www.ryuacupuncture.com</a> or require assistance with any part of our site, please contact us during normal business hours as detailed below and we will be happy to assist.</p>
     </div>
   </div>
-  <div id="accessibility_section_6" class="accessibility_section_6">
+  <div id="accessibility_section_6" class="accessibility_section_6 wf-section">
     <div class="main_container">
       <h2 class="legal_h2">6. CONTACT US</h2>
       <p class="legal_para">If you wish to report an accessibility issue, have any questions or need assistance, please contact us at <a href="mailto:ryuacupuncture@yahoo.com" target="_blank" class="blue_link"><strong>ryuacupuncture@yahoo.com</strong></a> or by post to:<br>‍<br>Ryu Acupuncture Clinic, Inc<br>3808 W. Riverside Dr., Ste 510<br>Burbank, CA 91505<br>United States<br></p>
     </div>
   </div>
-  <div class="footer_section">
+  <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
