--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 19 2021 03:37:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="609b95db42dbbe6742532f73" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -49,7 +49,7 @@ drift.load('r73nxaxiv89c');
 </head>
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container">
+    <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" class="link-block w-inline-block">
           <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
@@ -69,7 +69,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="blog_collection_page">
+  <div class="blog_collection_page wf-section">
     <div class="main_container">
       <h1 class="section_h1">Our Blog</h1>
       <div class="w-dyn-list">
@@ -92,7 +92,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="footer_section">
+  <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
