--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 19 2021 03:37:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -49,7 +49,7 @@ drift.load('r73nxaxiv89c');
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container">
+    <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" class="link-block w-inline-block">
           <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
@@ -69,13 +69,13 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="contact_page_section">
+  <div class="contact_page_section wf-section">
     <div class="main_container">
       <h1 class="section_h1">Contact Us</h1>
       <p class="solo_para">You can connect with us in a variety of ways that include email, phone, text or web form below. While we&#x27;re not magicians, we can guarantee our kind approach coupled with our years of expertise and knowledge will help you achieve balance in your journey to wellness. Feel free to reach out with questions or if you would like additional information about a particular treatment offered. We enjoy nothing more than to see our patients feeling better and returning to their normal lives and activities. </p>
       <div class="_2_block_row">
         <div class="_2_block margin_right">
-          <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" data-w-id="6df80a4d-3aac-723a-9665-be140689882a" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-widget w-widget-map"></div>
+          <div class="w-widget w-widget-map" data-widget-style="roadmap" data-widget-latlng="34.1523293,-118.3410588" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-enable-scroll="true" data-w-id="6df80a4d-3aac-723a-9665-be140689882a" data-enable-touch="true" data-widget-zoom="12" data-widget-tooltip="Ryu Acupuncture Clinic, Inc"></div>
         </div>
         <div class="_2_block margin_left">
           <div class="form-block w-form">
@@ -93,7 +93,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="footer_section">
+  <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
