--- a/team.html
+++ b/team.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 19 2021 03:37:12 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -49,7 +49,7 @@ drift.load('r73nxaxiv89c');
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="menu_container">
+    <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" class="link-block w-inline-block">
           <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
@@ -69,7 +69,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="our_team_section">
+  <div class="our_team_section wf-section">
     <div class="main_container">
       <h1 class="section_h1">Our Team</h1>
       <p class="solo_para">Our clinic is proudly family-owned and operated. Each member of our team brings different traits, skill sets, characteristics and specialties to the office - which makes us quite unique and more than capable of handling a wide-variety of different ailments. We are constantly working on improving our skills, keeping up with the latest medical information available and honing our technique. We welcome you to learn a bit more about each member of our team, our family.</p>
@@ -81,6 +81,13 @@ drift.load('r73nxaxiv89c');
           <p class="bio_para">Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean. Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues.<br></p>
         </div>
       </div>
+      <div class="_2_block_row margin_top">
+        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea6714999" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/jennifer_ryu.jpg" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="70f7b243-a42b-5465-f4ce-2bbea671499a" srcset="images/jennifer_ryu-p-500.jpeg 500w, images/jennifer_ryu-p-800.jpeg 800w, images/jennifer_ryu-p-1080.jpeg 1080w, images/jennifer_ryu-p-1600.jpeg 1600w, images/jennifer_ryu.jpg 1920w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 337.5px, (max-width: 991px) 28vw, (max-width: 1439px) 29vw, 390px" alt="Jennifer Ryu in the office." class="bio_img"></div>
+        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671498c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
+          <h2 class="section_h2_left">Dr. Jennifer Ryu, L.Ac.</h2>
+          <p class="bio_para">Jennifer followed into her father’s footsteps and has adopted the approach of treating the root causes and following the journey to wellness. She is board certified and uses traditional acupuncture, Korean hand acupuncture, auricular acupuncture, herbal medicine and many other techniques and modalities. She has a background working in autoimmune conditions, cancer, fertility, pain, and many other chronic conditions.<br><br>In her current enrollment of her Doctorate program, she is furthering her area of interest in fertility to women of and beyond the primal reproductive years. Her goal is to create a simpler understanding or dialogue to bridge the gap between and Eastern and Western medicine.</p>
+        </div>
+      </div>
       <div class="_2_block_row margin_bottom">
         <div data-w-id="99cbef90-9d54-49a2-9b11-65670f557035" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/veronica_ryu.jpg" loading="lazy" alt="Veronica Ryu in the office." class="bio_img"></div>
         <div data-w-id="99cbef90-9d54-49a2-9b11-65670f557037" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
@@ -88,16 +95,9 @@ drift.load('r73nxaxiv89c');
           <p class="bio_para">Veronica is a board certified acupuncturist and focuses on synergy of the mind and body. With her skills in traditional acupuncture, hand acupuncture, and herbal medicine, she has a strong motivation for women’s health, mental health, and daily functioning of overall wellness. She has a background working with fertility, pain, autoimmune conditions, cancer, and many other chronic conditions.<br><br>Veronica has received the top 10 student award numerous times and continues to be a student of life and medicine. She vehemently pursues her passion in creating a deeper understanding of that strange link between the human mind and energy.</p>
         </div>
       </div>
-      <div class="_2_block_row margin_top">
-        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea6714999" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/jennifer_ryu.jpg" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="70f7b243-a42b-5465-f4ce-2bbea671499a" srcset="images/jennifer_ryu-p-500.jpeg 500w, images/jennifer_ryu-p-800.jpeg 800w, images/jennifer_ryu-p-1080.jpeg 1080w, images/jennifer_ryu-p-1600.jpeg 1600w, images/jennifer_ryu.jpg 1920w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 337.5px, (max-width: 991px) 28vw, (max-width: 1439px) 29vw, 390px" alt="Jennifer Ryu in the office." class="bio_img"></div>
-        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671498c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
-          <h2 class="section_h2_left">Jennifer Ryu, L.Ac.</h2>
-          <p class="bio_para">Jennifer followed into her father’s footsteps and has adopted the approach of treating the root causes and following the journey to wellness. She is board certified and uses traditional acupuncture, Korean hand acupuncture, auricular acupuncture, herbal medicine and many other techniques and modalities. She has a background working in autoimmune conditions, cancer, fertility, pain, and many other chronic conditions.<br><br>In her current enrollment of her Doctorate program, she is furthering her area of interest in fertility to women of and beyond the primal reproductive years. Her goal is to create a simpler understanding or dialogue to bridge the gap between and Eastern and Western medicine.</p>
-        </div>
-      </div>
     </div>
   </div>
-  <div class="footer_section">
+  <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
