Starting the work of the service detail pages

--- a/acupuncture.html
+++ b/acupuncture.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Aug 08 2021 03:53:51 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 04 2021 06:15:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60d1879768e5d0e9d6625f09" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -65,8 +65,15 @@ drift.load('r73nxaxiv89c');
     </div>
   </div>
   <div class="service_page_section wf-section">
-    <div class="main_container"></div>
-    <h1 class="section_h1">Acupuncture</h1>
+    <div class="main_container">
+      <h1 class="section_h1">Acupuncture</h1>
+      <h2 class="service_detail_h2">What is acupuncture?</h2>
+      <h2 class="service_detail_h2">What does acupuncture treat?</h2>
+      <h2 class="service_detail_h2">What happens during an acupuncture session?</h2>
+      <h2 class="service_detail_h2">Is acupuncture safe?</h2>
+      <h2 class="service_detail_h2">Why choose acupuncture?</h2>
+      <h2 class="service_detail_h2">Will insurance cover my acupuncture treatments?</h2>
+    </div>
   </div>
   <div class="footer_section wf-section">
     <div class="main_container">
