Added 404 block to site map page

--- a/site-map.html
+++ b/site-map.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Sep 13 2021 07:05:50 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Sep 14 2021 06:41:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fabd152b2c7616de336da47" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -64,11 +64,9 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <div class="site_map_section wf-section">
-    <div class="main_container">
-      <h1 class="section_h1">Site Map</h1>
-    </div>
-  </div>
+  <a href="#" class="_404_link_block w-inline-block">
+    <div data-w-id="b744c25b-b751-fa01-5592-f532d21fea57" data-animation-type="lottie" data-src="documents/ryu_404.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
+  </a>
   <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
