Added 2nd blog and three detail pages, adjusted services page and added links to home page service segment

--- a/cupping.html
+++ b/cupping.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Sep 29 2021 06:52:56 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 05:50:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60d42ad7a8374fa565098720" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -66,9 +66,9 @@ drift.load('r73nxaxiv89c');
   </div>
   <div class="service_page_section wf-section">
     <div class="blog_container">
-      <div class="block_text_pre_h2">ACUPUNCTURE</div>
-      <h1 class="section_h1">The best acupuncture Burbank has to offer</h1>
-      <div class="acu_img_block"></div>
+      <div class="block_text_pre_h2">CUPPING</div>
+      <h1 class="section_h1">The best cupping Burbank has to offer</h1>
+      <div class="cup_img_block"></div>
       <h2 class="service_detail_h2">What is cupping?</h2>
       <p class="service_detail_para">Cupping has been used for thousands of years in traditional Chinese medicine. It is a treatment that increases blood flow and circulation by creating suction on the skin. This helps to reduce pain and speed up recovery time from injury or illness.<br><br>There are several different cupping techniques, but the most common involves cupping glass or ceramic jars over an area where there is pain or muscle strain. The air inside them is sucked out using a fire or a pump, creating a vacuum effect which pulls the skin upwards towards the cup&#x27;s lip.<br><br>After cupping, the skin often looks reddish or bruised. These are called cupping marks and are thought to indicate where the stagnation in the body is located. They can last for up to a week, but cupping will usually leave no permanent mark on the skin.<br><br>Cupping is sometimes carried out alongside acupuncture treatment, but it can also be used by itself. It is nearly always painless, although there may be some mild discomfort when the cups are applied. The patient experiences an immediate sense of relief after cupping because their blood flow has been improved so much more quickly than with other types of treatment.</p>
       <h2 class="service_detail_h2">What does cupping treat?</h2>
