--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Sep 29 2021 06:52:56 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 05:50:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -75,6 +75,79 @@ drift.load('r73nxaxiv89c');
       <p class="solo_para">We offer a wide range of holistic preventative and rehabilitative services. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proven effective for a wide array of chronic conditions. Fortunately, it is becoming more mainstream in the West. During your initial visit, we will work together to determine the cause of your condition through an evaluation of symptoms, behaviors and lifestyle. Additional examination such as history, look, feel, taste, smell and your ultimately your pulse will help guide the course of your treatment.</p>
     </div>
   </div>
+  <div class="services_options_section wf-section">
+    <div class="main_container">
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <div class="services_img_block_1"></div>
+        </div>
+        <div class="_2_block">
+          <h2 class="services_content_h3">Acupuncture</h2>
+          <p class="services_para">Traditional Chinese Medicine (TCM) defines acupuncture as a technique for balancing chi or qi (chee) - the flow of energy or life force. This energy flows through pathways in your body, known as meridians. By targeting specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
+          <p class="services_para">Essentially, acupuncture is the process of inserting very thin needles through the skin to activate the body&#x27;s natural ability to heal itself. This process is painless and will cause no physical harm, yet will elicit the body into activating a natural healing response. Simultaneously, reactions within the central nervous system, circulatory system and endocrine system help acupuncture deliver strong, lasting effects.</p>
+          <p class="services_para">Acupuncture is recognized by the <a href="https://www.who.int/" class="blue_link">World Health Organization</a> and the <a href="https://www.nccih.nih.gov/health/acupuncture-in-depth" class="blue_link">National Institutes of Health</a> as effecting in treating acute/chronic pain, neurological disorders, respiratory issues, digestive problems, urinary and reproductive health, immune function, ear/eye disorders, depression, anxiety, insomnia and even additions.<br></p>
+          <a href="acupuncture.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
+        </div>
+      </div>
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <div class="services_img_block_2"></div>
+        </div>
+        <div class="_2_block">
+          <h2 class="services_content_h3">Traditional Chinese Herbs</h2>
+          <p class="services_para">For centuries, China and other Asian countries have embraced Chinese Herbal Medicine. It&#x27;s usage and evolution can be found over a span of 2000 years and is the foundation upon which Traditional Chinese Medicine (TCM) is based upon. It has grown to become a powerful tool in regulating the body&#x27;s functions to both treat and prevent illnesses.</p>
+          <p class="services_para">Currently, more than 80% of the Traditional Chinese Medicine treatments in China are herbal. In fact, many of today&#x27;s modern drugs have been created from such herbs. These herbs are rarely used individually, but rather in conjunction with others to create a formula that consists of 2-15 herbs.</p>
+          <p class="services_para">Chinese Herbal Medicine assists in maintaining daily health by balancing the body. It is also highly sought-after as it is effective in treating acute diseases and chronic illnesses. While there are many different forms of herbal medicine, they all address root causes rather than the surface issue that may be being treated.</p>
+          <a href="traditional-chinese-herbs.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
+        </div>
+      </div>
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <div class="services_img_block_3"></div>
+        </div>
+        <div class="_2_block">
+          <h2 class="services_content_h3">Cupping</h2>
+          <p class="services_para">Cupping is an extraordinary technique, with roots to ancient Chinese and Egyptian medicine, where glass cups are placed along the body to create suction on the skin. This technique is designed to pull toxin build-up from deeper within the body to the surface. Physical pain is a good indicator that the flow of energy is blocked, allowing a build up of acids and toxins in the body.</p>
+          <p class="services_para">During the 2016 Summer Olympics cupping became part of the mainstream conversation, when U.S. swimmer Michael Phelps competed with round marks covering his back. Even thought it has soared in popularity recently, cupping has been around for thousands of years, even being documented on the Ebers Papyrus, one of the world&#x27;s oldest medical textbooks.</p>
+          <p class="services_para">Cupping has a myriad of health benefits, though is often associated with muscle and joint pain relief, boosting the immune system, alleviating lung problems, stimulating organs, balancing hormones, relieving headaches, improving digestion and impacting your overall mental and emotional health.</p>
+          <a href="cupping.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
+        </div>
+      </div>
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <div class="services_img_block_4"></div>
+        </div>
+        <div class="_2_block">
+          <h2 class="services_content_h3">Auriculotherapy</h2>
+          <p class="services_para">Auriculotherapy is a form of Traditional Chinese Medicine based on the idea that the ear is a microsystem. This system reflects the entire body and is represented on the auricle - the outer portion of the ear. Physical, mental or emotional conditions are treatable by stimulation of the ear exclusively, though are often used in conjunction with acupuncture of the body.</p>
+          <p class="services_para">For instance, when there is pain in a certain part of the body, the reflect point in the ear&#x27;s microsystem will present a difference in the electric potential as opposed to the rest of the adjacent areas. Often times, that reflex point may also be painful upon applying pressure to it.</p>
+          <p class="services_para">Stimulation may be carried out in a variety of ways, but most commonly by applying adhesive Vaccaria seeds (ear seeds), performing auricular acupuncture, electro-stimulation or even infra-red light. This treatment modality has many uses as there are more than 200 acupuncture points on the year.</p>
+        </div>
+      </div>
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <div class="services_img_block_5"></div>
+        </div>
+        <div class="_2_block">
+          <h2 class="services_content_h3">Moxibustion</h2>
+          <p class="services_para">Moxibustion is a form of therapy in which dried mugwort plant materials called &quot;moxa&quot; are burned on or near the surface of the skin. The intent is to invigorate the flow of Chi or Qi in the body and remove certain pathogenic influences. </p>
+          <p class="services_para">In Traditional Chinese Medicine, stimulating the flow of chi is considered essential to achieving health and wellness. In fact, this approach to healthcare is based on the belief that blockages in the flow of chi contribute to physical and mental health problems.</p>
+          <p class="services_para">Because fire (<em>yang</em>) is its central element, moxibustion is most often used to dispel cold stagnation (<em>yin</em>) and the conditions that arise as a result. Moxibustion is often used in lieu of acupuncture as it stimulates the same meridian points. This makes it a great alternative treatment for those with a fear of needles.</p>
+        </div>
+      </div>
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <div class="services_img_block_6"></div>
+        </div>
+        <div class="_2_block">
+          <h2 class="services_content_h3">Heat Therapy</h2>
+          <p class="services_para">Heat therapy is often used during an acupuncture treatment to warm the body, increase circulation and induce a state of relaxation. This is done by using a far-infrared heating device known as a TDP lamp. </p>
+          <p class="services_para">The light emissions penetrate deeply and accelerate healing in the body, increasing flexibility and range of motion, while decreasing pain and inflammation. It also aids with digestive function, eliminating water/toxic substances and strengthening the immune system.</p>
+          <p class="services_para">Use of the TDP lamp loosen tendons, muscles and fascia to allow an increase in blood flow. Within the blood are immune chemicals which decrease inflammation and ultimately decrease a recurrence of tightness while healing the condition. The lamp also contains a mineral plate which helps arthritic conditions.</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="services_picture_section wf-section">
     <div class="column-1">
       <div data-w-id="94ff37a6-3108-ceed-28b6-021db74dd2a4" class="photo _1"></div>
@@ -91,18 +164,21 @@ drift.load('r73nxaxiv89c');
           <p class="services_para">Traditional Chinese Medicine (TCM) defines acupuncture as a technique for balancing chi or qi (chee) - the flow of energy or life force. This energy flows through pathways in your body, known as meridians. By targeting specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
           <p class="services_para">Essentially, acupuncture is the process of inserting very thin needles through the skin to activate the body&#x27;s natural ability to heal itself. This process is painless and will cause no physical harm, yet will elicit the body into activating a natural healing response. Simultaneously, reactions within the central nervous system, circulatory system and endocrine system help acupuncture deliver strong, lasting effects.</p>
           <p class="services_para">Acupuncture is recognized by the <a href="https://www.who.int/" class="blue_link">World Health Organization</a> and the <a href="https://www.nccih.nih.gov/health/acupuncture-in-depth" class="blue_link">National Institutes of Health</a> as effecting in treating acute/chronic pain, neurological disorders, respiratory issues, digestive problems, urinary and reproductive health, immune function, ear/eye disorders, depression, anxiety, insomnia and even additions.<br></p>
+          <a href="acupuncture.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
         </div>
         <div style="opacity:0" class="the-content _2">
           <h2 class="services_content_h3">Traditional Chinese Herbs</h2>
           <p class="services_para">For centuries, China and other Asian countries have embraced Chinese Herbal Medicine. It&#x27;s usage and evolution can be found over a span of 2000 years and is the foundation upon which Traditional Chinese Medicine (TCM) is based upon. It has grown to become a powerful tool in regulating the body&#x27;s functions to both treat and prevent illnesses.</p>
           <p class="services_para">Currently, more than 80% of the Traditional Chinese Medicine treatments in China are herbal. In fact, many of today&#x27;s modern drugs have been created from such herbs. These herbs are rarely used individually, but rather in conjunction with others to create a formula that consists of 2-15 herbs.</p>
           <p class="services_para">Chinese Herbal Medicine assists in maintaining daily health by balancing the body. It is also highly sought-after as it is effective in treating acute diseases and chronic illnesses. While there are many different forms of herbal medicine, they all address root causes rather than the surface issue that may be being treated.</p>
+          <a href="traditional-chinese-herbs.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
         </div>
         <div style="opacity:0" class="the-content _3">
           <h2 class="services_content_h3">Cupping</h2>
           <p class="services_para">Cupping is an extraordinary technique, with roots to ancient Chinese and Egyptian medicine, where glass cups are placed along the body to create suction on the skin. This technique is designed to pull toxin build-up from deeper within the body to the surface. Physical pain is a good indicator that the flow of energy is blocked, allowing a build up of acids and toxins in the body.</p>
           <p class="services_para">During the 2016 Summer Olympics cupping became part of the mainstream conversation, when U.S. swimmer Michael Phelps competed with round marks covering his back. Even thought it has soared in popularity recently, cupping has been around for thousands of years, even being documented on the Ebers Papyrus, one of the world&#x27;s oldest medical textbooks.</p>
           <p class="services_para">Cupping has a myriad of health benefits, though is often associated with muscle and joint pain relief, boosting the immune system, alleviating lung problems, stimulating organs, balancing hormones, relieving headaches, improving digestion and impacting your overall mental and emotional health.</p>
+          <a href="cupping.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
         </div>
         <div style="opacity:0" class="the-content _4">
           <h2 class="services_content_h3">Auriculotherapy</h2>
@@ -136,6 +212,7 @@ drift.load('r73nxaxiv89c');
       <p class="services_para_mobile">Traditional Chinese Medicine (TCM) defines acupuncture as a technique for balancing chi or qi (chee) - the flow of energy or life force. This energy flows through pathways in your body, known as meridians. By targeting specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
       <p class="services_para_mobile">Essentially, acupuncture is the process of inserting very thin needles through the skin to activate the body&#x27;s natural ability to heal itself. This process is painless and will cause no physical harm, yet will elicit the body into activating a natural healing response. Simultaneously, reactions within the central nervous system, circulatory system and endocrine system help acupuncture deliver strong, lasting effects.</p>
       <p class="services_para_mobile">Acupuncture is recognized by the <a href="https://www.who.int/" class="blue_link">World Health Organization</a> and the <a href="https://www.nccih.nih.gov/health/acupuncture-in-depth" class="blue_link">National Institutes of Health</a> as effecting in treating acute/chronic pain, neurological disorders, respiratory issues, digestive problems, urinary and reproductive health, immune function, ear/eye disorders, depression, anxiety, insomnia and even additions.</p>
+      <a href="acupuncture.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
     </div>
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_herbs"></div>
@@ -147,6 +224,7 @@ drift.load('r73nxaxiv89c');
       <p class="services_para_mobile">For centuries, China and other Asian countries have embraced Chinese Herbal Medicine. It&#x27;s usage and evolution can be found over a span of 2000 years and is the foundation upon which Traditional Chinese Medicine (TCM) is based upon. It has grown to become a powerful tool in regulating the body&#x27;s functions to both treat and prevent illnesses.</p>
       <p class="services_para_mobile">Currently, more than 80% of the Traditional Chinese Medicine treatments in China are herbal. In fact, many of today&#x27;s modern drugs have been created from such herbs. These herbs are rarely used individually, but rather in conjunction with others to create a formula that consists of 2-15 herbs.</p>
       <p class="services_para_mobile">Chinese Herbal Medicine assists in maintaining daily health by balancing the body. It is also highly sought-after as it is effective in treating acute diseases and chronic illnesses. While there are many different forms of herbal medicine, they all address root causes rather than the surface issue that may be being treated.</p>
+      <a href="traditional-chinese-herbs.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
     </div>
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_cupping"></div>
@@ -158,6 +236,7 @@ drift.load('r73nxaxiv89c');
       <p class="services_para_mobile">Cupping is an extraordinary technique, with roots to ancient Chinese and Egyptian medicine, where glass cups are placed along the body to create suction on the skin. This technique is designed to pull toxin build-up from deeper within the body to the surface. Physical pain is a good indicator that the flow of energy is blocked, allowing a build up of acids and toxins in the body.</p>
       <p class="services_para_mobile">During the 2016 Summer Olympics cupping became part of the mainstream conversation, when U.S. swimmer Michael Phelps competed with round marks covering his back. Even thought it has soared in popularity recently, cupping has been around for thousands of years, even being documented on the Ebers Papyrus, one of the world&#x27;s oldest medical textbooks.</p>
       <p class="services_para_mobile">Cupping has a myriad of health benefits, though is often associated with muscle and joint pain relief, boosting the immune system, alleviating lung problems, stimulating organs, balancing hormones, relieving headaches, improving digestion and impacting your overall mental and emotional health.</p>
+      <a href="cupping.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
     </div>
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_ear_seeds"></div>
