Removed several pages and corrected some capitalization and removed some verbiage

--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 05:50:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 06:49:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -83,7 +83,7 @@ drift.load('r73nxaxiv89c');
         </div>
         <div class="_2_block">
           <h2 class="services_content_h3">Acupuncture</h2>
-          <p class="services_para">Traditional Chinese Medicine (TCM) defines acupuncture as a technique for balancing chi or qi (chee) - the flow of energy or life force. This energy flows through pathways in your body, known as meridians. By targeting specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
+          <p class="services_para">Traditional Chinese Medicine (TCM) defines acupuncture as a technique for balancing Qi (chee) - the flow of energy or life force. This energy flows through pathways in your body, known as meridians. By targeting specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
           <p class="services_para">Essentially, acupuncture is the process of inserting very thin needles through the skin to activate the body&#x27;s natural ability to heal itself. This process is painless and will cause no physical harm, yet will elicit the body into activating a natural healing response. Simultaneously, reactions within the central nervous system, circulatory system and endocrine system help acupuncture deliver strong, lasting effects.</p>
           <p class="services_para">Acupuncture is recognized by the <a href="https://www.who.int/" class="blue_link">World Health Organization</a> and the <a href="https://www.nccih.nih.gov/health/acupuncture-in-depth" class="blue_link">National Institutes of Health</a> as effecting in treating acute/chronic pain, neurological disorders, respiratory issues, digestive problems, urinary and reproductive health, immune function, ear/eye disorders, depression, anxiety, insomnia and even additions.<br></p>
           <a href="acupuncture.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
@@ -130,9 +130,9 @@ drift.load('r73nxaxiv89c');
         </div>
         <div class="_2_block">
           <h2 class="services_content_h3">Moxibustion</h2>
-          <p class="services_para">Moxibustion is a form of therapy in which dried mugwort plant materials called &quot;moxa&quot; are burned on or near the surface of the skin. The intent is to invigorate the flow of Chi or Qi in the body and remove certain pathogenic influences. </p>
-          <p class="services_para">In Traditional Chinese Medicine, stimulating the flow of chi is considered essential to achieving health and wellness. In fact, this approach to healthcare is based on the belief that blockages in the flow of chi contribute to physical and mental health problems.</p>
-          <p class="services_para">Because fire (<em>yang</em>) is its central element, moxibustion is most often used to dispel cold stagnation (<em>yin</em>) and the conditions that arise as a result. Moxibustion is often used in lieu of acupuncture as it stimulates the same meridian points. This makes it a great alternative treatment for those with a fear of needles.</p>
+          <p class="services_para">Moxibustion is a form of therapy in which dried mugwort plant materials called &quot;moxa&quot; are burned on or near the surface of the skin. The intent is to invigorate the flow of Qi in the body and remove certain pathogenic influences. </p>
+          <p class="services_para">In Traditional Chinese Medicine, stimulating the flow of Qi is considered essential to achieving health and wellness. In fact, this approach to healthcare is based on the belief that blockages in the flow of chi contribute to physical and mental health problems.</p>
+          <p class="services_para">Because fire (<em>Yang</em>) is its central element, moxibustion is most often used to dispel cold stagnation (<em>Yin</em>) and the conditions that arise as a result. Moxibustion is often used in lieu of acupuncture as it stimulates the same meridian points. This makes it a great alternative treatment for those with a fear of needles.</p>
         </div>
       </div>
       <div class="_2_block_row">
