Corrected layout of blog CMS, fixed mobile text on services page and adjusted spacing throughout

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 13:42:56 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 23:16:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -105,7 +105,7 @@ drift.load('r73nxaxiv89c');
         <div class="_2_block">
           <div class="block_text_pre_h2_left">CLEANLINESS</div>
           <h2 class="section_h2_left">Hospital clean office with Covid-19 adherences</h2>
-          <p>We take pride in keeping our office hospital clean while meeting and exceeding Covid-19 protocols. Treatment rooms are thoroughly sterilized after each patient. Our staff wears face masks at all times and we offer hand in the receptions area as well as the treatment rooms for patient use. We adamantly adhere to the CDC guidelines to ensure that health of our patients are never in jeopardy. This is just one of the reasons we&#x27;re the best acupuncture Burbank has to offer.</p>
+          <p>We take pride in keeping our office hospital clean while meeting and exceeding Covid-19 protocols. We screen all patients and verify with temperature checks. Treatment rooms are thoroughly sterilized after each patient. Our staff wears face masks at all times and we offer hand sanitizer in the receptions area as well as the treatment rooms for patient use. We adamantly adhere to the CDC guidelines to ensure that health of our patients are never in jeopardy. This is just one of the reasons we&#x27;re the best acupuncture Burbank has to offer.</p>
         </div>
         <div data-w-id="bcd27994-ddcf-2e98-a30f-12638afa79cd" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" title="360 degree view of Ryu Acupuncture"></iframe></div>
@@ -118,7 +118,7 @@ drift.load('r73nxaxiv89c');
         <div class="_2_block">
           <div class="block_text_pre_h2_left">RESULTS MATTER</div>
           <h2 class="section_h2_left">Exemplary record of success over many years of service</h2>
-          <p>We have been in business for over 20+ years, in which we have achieved great success with our patients and their outcomes. We utilize only the best and proven of Eastern Medicine treatments in individual, customized plans made specifically around your current health and any ailments you may be experiencing.</p>
+          <p>We have been in business for over 20+ years, in which we have achieved great success with our patients and their outcomes. We utilize only the best and proven of Eastern medicine treatments in individual, customized plans made specifically around your current health and any ailments you may be experiencing.</p>
         </div>
       </div>
       <div class="statistics_block">
@@ -312,7 +312,7 @@ drift.load('r73nxaxiv89c');
     <div class="main_container">
       <div class="block_text_pre_h2">OUR SERVICES</div>
       <h2 class="section_h2">Services to balance your life</h2>
-      <p class="solo_para">We offer a wide range of holistic preventative and rehabilitative services. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proven effective for a wide array of chronic conditions. Fortunately, it is becoming more mainstream in the West. During your initial visit, we will work together to determine the cause of your condition through an evaluation of symptoms, behaviors and lifestyle. Additional examination such as history, look, feel, taste, smell and your ultimately your pulse will help guide the course of your treatment.</p>
+      <p class="solo_para">We offer a wide range of holistic preventative and rehabilitative services. Eastern medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proven effective for a wide array of chronic conditions. Fortunately, it is becoming more mainstream in the West. During your initial visit, we will work together to determine the cause of your condition through an evaluation of symptoms, behaviors and lifestyle. Additional examination such as history, look, feel, taste, smell and your ultimately your pulse will help guide the course of your treatment.</p>
       <div class="cards_grid">
         <a href="acupuncture.html" class="service_card_link w-inline-block">
           <div class="card_block">
