--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 13:42:56 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 23:16:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -108,7 +108,7 @@ drift.load('r73nxaxiv89c');
         <div class="_2_block">
           <h2 class="services_content_h3">Cupping</h2>
           <p class="services_para">Cupping is an extraordinary technique, with roots to ancient Chinese and Egyptian medicine, where glass cups are placed along the body to create suction on the skin. This technique is designed to pull toxin build-up from deeper within the body to the surface. Physical pain is a good indicator that the flow of energy is blocked, allowing a build up of acids and toxins in the body.</p>
-          <p class="services_para">During the 2016 Summer Olympics cupping became part of the mainstream conversation, when U.S. swimmer Michael Phelps competed with round marks covering his back. Even thought it has soared in popularity recently, cupping has been around for thousands of years, even being documented on the Ebers Papyrus, one of the world&#x27;s oldest medical textbooks.</p>
+          <p class="services_para">During the 2016 Summer Olympics cupping became part of the mainstream conversation, when U.S. swimmer Michael Phelps competed with round marks covering his back. Even though it has soared in popularity recently, cupping has been around for thousands of years, even being documented on the Ebers Papyrus, one of the world&#x27;s oldest medical textbooks.</p>
           <p class="services_para">Cupping has a myriad of health benefits, though is often associated with muscle and joint pain relief, boosting the immune system, alleviating lung problems, stimulating organs, balancing hormones, relieving headaches, improving digestion and impacting your overall mental and emotional health.</p>
           <a href="cupping.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
         </div>
@@ -209,7 +209,7 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
     <div class="services_mobile_info_block">
-      <p class="services_para_mobile">Traditional Chinese Medicine (TCM) defines acupuncture as a technique for balancing chi or qi (chee) - the flow of energy or life force. This energy flows through pathways in your body, known as meridians. By targeting specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
+      <p class="services_para_mobile">Traditional Chinese Medicine (TCM) defines acupuncture as a technique for balancing Qi (chee) - the flow of energy or life force. This energy flows through pathways in your body, known as meridians. By targeting specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
       <p class="services_para_mobile">Essentially, acupuncture is the process of inserting very thin needles through the skin to activate the body&#x27;s natural ability to heal itself. This process is painless and will cause no physical harm, yet will elicit the body into activating a natural healing response. Simultaneously, reactions within the central nervous system, circulatory system and endocrine system help acupuncture deliver strong, lasting effects.</p>
       <p class="services_para_mobile">Acupuncture is recognized by the <a href="https://www.who.int/" class="blue_link">World Health Organization</a> and the <a href="https://www.nccih.nih.gov/health/acupuncture-in-depth" class="blue_link">National Institutes of Health</a> as effecting in treating acute/chronic pain, neurological disorders, respiratory issues, digestive problems, urinary and reproductive health, immune function, ear/eye disorders, depression, anxiety, insomnia and even additions.</p>
       <a href="acupuncture.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
@@ -234,7 +234,7 @@ drift.load('r73nxaxiv89c');
     </div>
     <div class="services_mobile_info_block">
       <p class="services_para_mobile">Cupping is an extraordinary technique, with roots to ancient Chinese and Egyptian medicine, where glass cups are placed along the body to create suction on the skin. This technique is designed to pull toxin build-up from deeper within the body to the surface. Physical pain is a good indicator that the flow of energy is blocked, allowing a build up of acids and toxins in the body.</p>
-      <p class="services_para_mobile">During the 2016 Summer Olympics cupping became part of the mainstream conversation, when U.S. swimmer Michael Phelps competed with round marks covering his back. Even thought it has soared in popularity recently, cupping has been around for thousands of years, even being documented on the Ebers Papyrus, one of the world&#x27;s oldest medical textbooks.</p>
+      <p class="services_para_mobile">During the 2016 Summer Olympics cupping became part of the mainstream conversation, when U.S. swimmer Michael Phelps competed with round marks covering his back. Even though it has soared in popularity recently, cupping has been around for thousands of years, even being documented on the Ebers Papyrus, one of the world&#x27;s oldest medical textbooks.</p>
       <p class="services_para_mobile">Cupping has a myriad of health benefits, though is often associated with muscle and joint pain relief, boosting the immune system, alleviating lung problems, stimulating organs, balancing hormones, relieving headaches, improving digestion and impacting your overall mental and emotional health.</p>
       <a href="cupping.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
     </div>
@@ -256,9 +256,9 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
     <div class="services_mobile_info_block">
-      <p class="services_para_mobile">Moxibustion is a form of therapy in which dried mugwort plant materials called &quot;moxa&quot; are burned on or near the surface of the skin. The intent is to invigorate the flow of Chi or Qi in the body and remove certain pathogenic influences. </p>
-      <p class="services_para_mobile">In Traditional Chinese Medicine, stimulating the flow of chi is considered essential to achieving health and wellness. In fact, this approach to healthcare is based on the belief that blockages in the flow of chi contribute to physical and mental health problems.</p>
-      <p class="services_para_mobile">Because fire (yang) is its central element, moxibustion is most often used to dispel cold stagnation (yin) and the conditions that arise as a result. Moxibustion is often used in lieu of acupuncture as it stimulates the same meridian points. This makes it a great alternative treatment for those with a fear of needles.</p>
+      <p class="services_para_mobile">Moxibustion is a form of therapy in which dried mugwort plant materials called &quot;moxa&quot; are burned on or near the surface of the skin. The intent is to invigorate the flow of Qi in the body and remove certain pathogenic influences. </p>
+      <p class="services_para_mobile">In Traditional Chinese Medicine, stimulating the flow of Qi is considered essential to achieving health and wellness. In fact, this approach to healthcare is based on the belief that blockages in the flow of Qi contribute to physical and mental health problems.</p>
+      <p class="services_para_mobile">Because fire (Yang) is its central element, moxibustion is most often used to dispel cold stagnation (Yin) and the conditions that arise as a result. Moxibustion is often used in lieu of acupuncture as it stimulates the same meridian points. This makes it a great alternative treatment for those with a fear of needles.</p>
     </div>
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_infrared_treatment"></div>
