Adjusted meta titles and descriptions

--- a/acupuncture.html
+++ b/acupuncture.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 23:28:34 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Oct 04 2021 06:54:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60d1879768e5d0e9d6625f09" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Acupuncture</title>
-  <meta content="Acupuncture" property="og:title">
-  <meta content="Acupuncture" property="twitter:title">
+  <title>Acupuncture Services in Burbank, CA | Ryu Acupuncture Clinic</title>
+  <meta content="If you are looking for a professional acupuncture clinic in Burbank, CA, look no further than Ryu Acupuncture. Our team of experts is ready to cater to all your needs and provide you with the best treatment available. Call us at 818-841-9790." name="description">
+  <meta content="Acupuncture Services in Burbank, CA | Ryu Acupuncture Clinic" property="og:title">
+  <meta content="If you are looking for a professional acupuncture clinic in Burbank, CA, look no further than Ryu Acupuncture. Our team of experts is ready to cater to all your needs and provide you with the best treatment available. Call us at 818-841-9790." property="og:description">
+  <meta content="Acupuncture Services in Burbank, CA | Ryu Acupuncture Clinic" property="twitter:title">
+  <meta content="If you are looking for a professional acupuncture clinic in Burbank, CA, look no further than Ryu Acupuncture. Our team of experts is ready to cater to all your needs and provide you with the best treatment available. Call us at 818-841-9790." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="_iO09uvLhcaQi6DQV-uV7rNTe5M6g020o0eeeHfIq0A" name="google-site-verification">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
