--- a/cupping.html
+++ b/cupping.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 23:28:34 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Oct 04 2021 06:54:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60d42ad7a8374fa565098720" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Cupping</title>
-  <meta content="Cupping" property="og:title">
-  <meta content="Cupping" property="twitter:title">
+  <title>Cupping | Ryu Acupuncture Clinic</title>
+  <meta content="Cupping | Ryu Acupuncture Clinic" property="og:title">
+  <meta content="Cupping | Ryu Acupuncture Clinic" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="_iO09uvLhcaQi6DQV-uV7rNTe5M6g020o0eeeHfIq0A" name="google-site-verification">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
